User refactored Added IdentityProfile entity Regenerated rest Updated docker-compose
