# internal/api/restapi/restapi/operations/user/delete_user_urlbuilder.go
@@ -9,11 +9,16 @@ import (
 	"errors"
 	"net/url"
 	golangswaggerpaths "path"
+	"strings"
 )
 
 // DeleteUserURL generates an URL for the delete user operation
 type DeleteUserURL struct {
+	ID string
+
 	_basePath string
+	// avoid unkeyed usage
+	_ struct{}
 }
 
 // WithBasePath sets the base path for this url builder, only required when it's different from the
@@ -35,7 +40,14 @@ func (o *DeleteUserURL) SetBasePath(bp string) {
 func (o *DeleteUserURL) Build() (*url.URL, error) {
 	var _result url.URL
 
-	var _path = "/user/delete"
+	var _path = "/user/{id}/delete"
+
+	id := o.ID
+	if id != "" {
+		_path = strings.Replace(_path, "{id}", id, -1)
+	} else {
+		return nil, errors.New("id is required on DeleteUserURL")
+	}
 
 	_basePath := o._basePath
 	_result.Path = golangswaggerpaths.Join(_basePath, _path)
