# internal/api/restapi/restapi/operations/wash_bonus_api.go
@@ -67,6 +67,9 @@ func NewWashBonusAPI(spec *loads.Document) *WashBonusAPI {
 		WashServerEditWashServerHandler: wash_server.EditWashServerHandlerFunc(func(params wash_server.EditWashServerParams, principal interface{}) middleware.Responder {
 			return middleware.NotImplemented("operation wash_server.EditWashServer has not yet been implemented")
 		}),
+		UserGetCurrentUserHandler: user.GetCurrentUserHandlerFunc(func(params user.GetCurrentUserParams, principal interface{}) middleware.Responder {
+			return middleware.NotImplemented("operation user.GetCurrentUser has not yet been implemented")
+		}),
 		UserGetUserHandler: user.GetUserHandlerFunc(func(params user.GetUserParams, principal interface{}) middleware.Responder {
 			return middleware.NotImplemented("operation user.GetUser has not yet been implemented")
 		}),
@@ -146,6 +149,8 @@ type WashBonusAPI struct {
 	UserEditUserHandler user.EditUserHandler
 	// WashServerEditWashServerHandler sets the operation handler for the edit wash server operation
 	WashServerEditWashServerHandler wash_server.EditWashServerHandler
+	// UserGetCurrentUserHandler sets the operation handler for the get current user operation
+	UserGetCurrentUserHandler user.GetCurrentUserHandler
 	// UserGetUserHandler sets the operation handler for the get user operation
 	UserGetUserHandler user.GetUserHandler
 	// WashServerGetWashServerHandler sets the operation handler for the get wash server operation
@@ -257,6 +262,9 @@ func (o *WashBonusAPI) Validate() error {
 	}
 	if o.WashServerEditWashServerHandler == nil {
 		unregistered = append(unregistered, "wash_server.EditWashServerHandler")
+	}
+	if o.UserGetCurrentUserHandler == nil {
+		unregistered = append(unregistered, "user.GetCurrentUserHandler")
 	}
 	if o.UserGetUserHandler == nil {
 		unregistered = append(unregistered, "user.GetUserHandler")
@@ -385,7 +393,7 @@ func (o *WashBonusAPI) initHandlerCache() {
 	if o.handlers["DELETE"] == nil {
 		o.handlers["DELETE"] = make(map[string]http.Handler)
 	}
-	o.handlers["DELETE"]["/user/delete"] = user.NewDeleteUser(o.context, o.UserDeleteUserHandler)
+	o.handlers["DELETE"]["/user/{id}/delete"] = user.NewDeleteUser(o.context, o.UserDeleteUserHandler)
 	if o.handlers["DELETE"] == nil {
 		o.handlers["DELETE"] = make(map[string]http.Handler)
 	}
@@ -393,15 +401,19 @@ func (o *WashBonusAPI) initHandlerCache() {
 	if o.handlers["PUT"] == nil {
 		o.handlers["PUT"] = make(map[string]http.Handler)
 	}
-	o.handlers["PUT"]["/user/edit"] = user.NewEditUser(o.context, o.UserEditUserHandler)
+	o.handlers["PUT"]["/user/{id}/edit"] = user.NewEditUser(o.context, o.UserEditUserHandler)
 	if o.handlers["PUT"] == nil {
 		o.handlers["PUT"] = make(map[string]http.Handler)
 	}
 	o.handlers["PUT"]["/washServer/edit"] = wash_server.NewEditWashServer(o.context, o.WashServerEditWashServerHandler)
-	if o.handlers["POST"] == nil {
-		o.handlers["POST"] = make(map[string]http.Handler)
+	if o.handlers["GET"] == nil {
+		o.handlers["GET"] = make(map[string]http.Handler)
 	}
-	o.handlers["POST"]["/user/get"] = user.NewGetUser(o.context, o.UserGetUserHandler)
+	o.handlers["GET"]["/user"] = user.NewGetCurrentUser(o.context, o.UserGetCurrentUserHandler)
+	if o.handlers["GET"] == nil {
+		o.handlers["GET"] = make(map[string]http.Handler)
+	}
+	o.handlers["GET"]["/user/{id}"] = user.NewGetUser(o.context, o.UserGetUserHandler)
 	if o.handlers["POST"] == nil {
 		o.handlers["POST"] = make(map[string]http.Handler)
 	}
